# swaylor-tift

./: .gitignore  README.md
src/: docker-entrypoint.sh  pyproject.toml
src/swaylor-tift/: generate_unconditional_samples.py
src/swaylor-tift/models/lyric/: model-2000.index
src/tests/: test_swaylor_tift.py
swaylor-tift/: Dockerfile
swaylor-tift/swaylor-tift/: client.py  swaylor_tift.py
swaylor-tift/swaylor-tift/models/lyric/: model-1000.index
