[tool.poetry]
name = "swaylor-tift"
version = "0.1.0"
description = ""
authors = ["Sara Tan <saratan@mac.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
tweepy = "^4.6.0"
python-dotenv = "^0.19.2"
fire = "^0.4.0"
numpy = "^1.22.2"
tensorflow = "^2.8.0"
regex = "^2022.3.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
